[metadata]
name = sesdev
summary = CLI tool to create and manage SES clusters for testing and development purposes
description-file =
    README.md
    CHANGELOG.md
home-page = https://github.com/SUSE/sesdev
requires-dist = setuptools
license = MIT License
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: Utilities

[options]
install_requires =
    Click >= 6.7, < 7
    Jinja2 >= 2.10.1
    libvirt-python >= 5.1.0
    PrettyTable
    pycryptodomex >= 3.4.6
    PyYAML >= 3.13

packages =
    seslib
    sesdev

[options.package_data]
seslib =
    templates/*.j2
    templates/deepsea/*.j2
    templates/caasp/*.j2
    templates/ceph-salt/*.j2
    templates/suma/*.j2
    templates/engine/libvirt/*.j2

[options.entry_points]
console_scripts =
    sesdev = sesdev:sesdev_main

[options.extras_require]
dev =
    pytest
    pycodestyle
    pylint

[pycodestyle]
max-line-length = 100
