[metadata]
name = sesdev
summary = CLI tool to create and manage SES clusters for testing and development purposes
description-file =
    README.md
    CHANGELOG.md
home-page = https://github.com/SUSE/sesdev
requires-dist = setuptools
license = MIT License
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
    Topic :: Utilities

[options]
install_requires =
    Click >= 6.7
    Jinja2 >= 2.10.1
    PrettyTable
    PyYAML >= 3.13
    libvirt-python >= 5.1.0
    pycryptodomex >= 3.4.6
    requests

packages =
    seslib
    sesdev

[options.package_data]
seslib =
    templates/*.j2
    templates/caasp/*.j2
    templates/engine/libvirt/*.j2
    templates/makecheck/*.j2
    templates/salt/*.j2
    templates/salt/ceph-salt/*.j2
    templates/salt/deepsea/*.j2
    templates/salt/suma/*.j2
    templates/cephadm/*.j2

[options.entry_points]
console_scripts =
    sesdev = sesdev:sesdev_main

[options.extras_require]
dev =
    pytest
    pytest-pycodestyle
    pycodestyle
    pylint
    tox

[pycodestyle]
max-line-length = 100
